background needs proof reading and restructure specially for the last part

--- a/biblio.bib
+++ b/biblio.bib
@@ -558,4 +558,21 @@ url = { https://doi.org/10.1007/JHEP04(2013)027}
 	title = {{Spin determination of single-produced resonances at hadron colliders}},
 	journal = {Physical Review D}
 }
+
+@Article{btagATLAS,
+    author         = "{ATLAS Collaboration}",
+    title          = "{ATLAS \(b\)-jet identification performance and efficiency measurement with \(t\bar{t}\) events in \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\)}",
+    year           = "2019",
+    reportNumber   = "CERN-EP-2019-132",
+    eprint         = "1907.05120",
+    archivePrefix  = "arXiv",
+    primaryClass   = "hep-ex",
+}
+
+@unpublished{FakeBkgTool,
+title= "{Technical discussion of FakeBkgTools}",
+author = "{J. Maurer, J. Reichert, E. Varnes}",
+year = {2018},
+URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708457/2753712/fakeBkgToolsAug31.pdf},
+}
 %% Haven't been used can delete later
