--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -1,14 +1,18 @@
 \begin{itemize}
 \item{BSM: Beyond the Standard Model}
-\item {C: Charge conjugation}
+\item{C: Charge conjugation}
+\item{CR: Control Region}
 \item{EFT: Effective Field Theory}
 \item{EWK: Electroweak}
 \item{FSR: Final State Radiation}
 \item{GRL: Good Run List}
 \item{H: Weak Hypercharge}
-\item{ I: Weak Isospin}
+\item{HF: Heavy Flavor}
+\item{I: Weak Isospin}
+\item{IFF:Isolation and Fake Forum}
 \item{$\mathcal{L_{SM}}$: Lagrangian}
 \item{LB: Luminosity Block}
+\item{LF: Light Flavor} 
 \item{LH:  Left Handed}
 \item{MC: Monte Carlo}
 \item{P: Parity}
@@ -21,9 +25,13 @@
 \item{RH: RightHanded}
 \item{SF-OC: Same-flavor, Opposite-charged} 
 \item{SM: Standard Model}
+\item{SR: Signal Region}
 \item{T: Time-reversal}
 \item{TGC: Triple Gauge Coupling}
 \item{TTVA: Track-to-vertex association}
 \item{VBS: Vector Boson Scattering}
+\item{VR: Validation Region}
+\item{VRSC: Same Charge Validation Region}
+\item{VRDF: Different Flavor Validation Region}
 \item{VEV: Vacuum Expectation Value}
 \end{itemize}
